--- a/HoverExtension/manifest.json
+++ b/HoverExtension/manifest.json
@@ -1,10 +1,10 @@
 {
     "name": "__MSG_extName__",
     "short_name": "__MSG_extShortName__",
-    "version": "1.1.3",
+    "version": "1.0",
     "description": "__MSG_extDescription__",
-    "homepage_url": "https://github.com/extesy/hoverzoom/",
-    "author": "Oleg Anashkin",
+    "homepage_url": "https://github.com/Bhanu-0M/AITooltip/",
+    "author": "Bhanu Teja Sai",
     "manifest_version": 3,
     "icons": {
         "16": "images/icon19.png",
@@ -33,7 +33,7 @@
             "19": "images/icon19.png"
         },
         "default_popup": "html/popup.html",
-        "default_title": "Hover Zoom+"
+        "default_title": "ToolTip Summarizer"
     },
     "permissions": [
         "declarativeNetRequest",
